CS440/Project/src/parser/ssParser.java
/* ssParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. ssParser.java */
package parser; import java.io.*; import ast.*;

public class ssParser/*@bgen(jjtree)*/implements ssParserTreeConstants, ssParserConstants {/*@bgen(jjtree)*/
  protected JJTssParserState jjtree = new JJTssParserState();public static void main(String args[]) {

    ssParser t =null;
    if(args.length>0){
        System.out.println("Begin To Parse file " + args[0]);
        try {
                t=new ssParser(new FileInputStream(new File(args[0])));
                } catch (FileNotFoundException e) {
                        e.printStackTrace();
        }
    }else{
        System.out.println("Begin To Parse standard input ");
        t=new ssParser(System.in);
    }
    try {
      SimpleNode n = t.Goal();
      SymbolTableVisitor symbolTable=new SymbolTableVisitor();
      n.jjtAccept(symbolTable,null);
      n.jjtAccept(new TypeCheckVisitor(symbolTable.table),null);

      System.out.println("==========AST Print==========");
      n.jjtAccept(new ssASTPrintVisitor(),null);
      //n.dump("");
      System.out.println("============================= \u005cn AST print successful");
    } catch (Exception e) {
      System.out.println("Error encountered....");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

  final public SimpleNode Goal() throws ParseException {/*@bgen(jjtree) Goal */
  ASTGoal jjtn000 = new ASTGoal(JJTGOAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      MainClass();
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        ClassDeclaration();
      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void MainClass() throws ParseException {/*@bgen(jjtree) MainClass */
  ASTMainClass jjtn000 = new ASTMainClass(JJTMAINCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      Identifier();
      jj_consume_token(44);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(45);
      jj_consume_token(STRING);
      jj_consume_token(46);
      jj_consume_token(47);
      Identifier();
      jj_consume_token(48);
      jj_consume_token(44);
      if (jj_2_2(3)) {
        Statement();
      } else {
        ;
      }
      jj_consume_token(49);
      jj_consume_token(49);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ClassDeclaration() throws ParseException {/*@bgen(jjtree) ClassDeclaration */
  ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      Identifier();
      if (jj_2_3(3)) {
        jj_consume_token(EXTENDS);
        Identifier();
      } else {
        ;
      }
      jj_consume_token(44);
      label_2:
      while (true) {
        if (jj_2_4(3)) {
          ;
        } else {
          break label_2;
        }
        VarDeclaration();
      }
      label_3:
      while (true) {
        if (jj_2_5(3)) {
          ;
        } else {
          break label_3;
        }
        MethodDeclaration();
      }
      jj_consume_token(49);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) VarDeclaration */
  ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_6(3)) {
        Type();
        Identifier();
        jj_consume_token(50);
      } else if (jj_2_7(3)) {
        Type();
        Identifier();
        AssignmentOperator();
        Expression();
        jj_consume_token(50);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void MethodDeclaration() throws ParseException {/*@bgen(jjtree) MethodDeclaration */
  ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PUBLIC);
      Type();
      Identifier();
      jj_consume_token(45);
      if (jj_2_9(3)) {
        Type();
        Identifier();
        label_4:
        while (true) {
          if (jj_2_8(3)) {
            ;
          } else {
            break label_4;
          }
          jj_consume_token(51);
          Type();
          Identifier();
        }
      } else {
        ;
      }
      jj_consume_token(48);
      jj_consume_token(44);
      label_5:
      while (true) {
        if (jj_2_10(2)) {
          ;
        } else {
          break label_5;
        }
        VarDeclaration();
      }
      label_6:
      while (true) {
        if (jj_2_11(3)) {
          ;
        } else {
          break label_6;
        }
        Statement();
      }
      ReturnExpression();
      jj_consume_token(50);
      jj_consume_token(49);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ReturnExpression() throws ParseException {/*@bgen(jjtree) ReturnExpression */
  ASTReturnExpression jjtn000 = new ASTReturnExpression(JJTRETURNEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      if (jj_2_12(3)) {
        Expression();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Type() throws ParseException {/*@bgen(jjtree) Type */
  ASTType jjtn000 = new ASTType(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_13(2)) {
        jj_consume_token(INT);
        jj_consume_token(46);
        jj_consume_token(47);
jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
jjtn000.token = token; jjtn000.token.image = "int[]";
      } else if (jj_2_14(3)) {
        jj_consume_token(BOOLEAN);
jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
jjtn000.token = token;
      } else if (jj_2_15(3)) {
        jj_consume_token(INT);
jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
jjtn000.token = token;
      } else if (jj_2_16(3)) {
        jj_consume_token(DOUBLE);
jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
jjtn000.token = token;
      } else if (jj_2_17(3)) {
        jj_consume_token(CHAR);
jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
jjtn000.token = token;
      } else if (jj_2_18(3)) {
        jj_consume_token(STRING);
jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
jjtn000.token = token;
      } else if (jj_2_19(3)) {
        jj_consume_token(VOID);
jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
jjtn000.token = token;
      } else if (jj_2_20(3)) {
        Identifier();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void Statement() throws ParseException {
    if (jj_2_22(3)) {
      jj_consume_token(44);
      label_7:
      while (true) {
        if (jj_2_21(3)) {
          ;
        } else {
          break label_7;
        }
        Statement();
      }
      jj_consume_token(49);
    } else if (jj_2_23(3)) {
      IfStatement();
    } else if (jj_2_24(3)) {
      WhileStatement();
    } else if (jj_2_25(3)) {
      PrintStatement();
    } else if (jj_2_26(3)) {
      EmptyStatement();
    } else if (jj_2_27(3)) {
      VarDeclaration();
    } else if (jj_2_28(2)) {
      Assignment();
    } else if (jj_2_29(2)) {
      ArrayAssignment();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void EmptyStatement() throws ParseException {/*@bgen(jjtree) EmptyStatement */
  ASTEmptyStatement jjtn000 = new ASTEmptyStatement(JJTEMPTYSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(50);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Assignment() throws ParseException {/*@bgen(jjtree) Assignment */
  ASTAssignment jjtn000 = new ASTAssignment(JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      AssignmentOperator();
      Expression();
      jj_consume_token(50);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ArrayAssignment() throws ParseException {/*@bgen(jjtree) ArrayAssignment */
  ASTArrayAssignment jjtn000 = new ASTArrayAssignment(JJTARRAYASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      jj_consume_token(46);
      Expression();
      jj_consume_token(47);
      AssignmentOperator();
      Expression();
      jj_consume_token(50);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void AssignmentOperator() throws ParseException {/*@bgen(jjtree) AssignmentOperator */
  ASTAssignmentOperator jjtn000 = new ASTAssignmentOperator(JJTASSIGNMENTOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_30(3)) {
        jj_consume_token(52);
      } else if (jj_2_31(3)) {
        jj_consume_token(53);
      } else if (jj_2_32(3)) {
        jj_consume_token(54);
      } else if (jj_2_33(3)) {
        jj_consume_token(55);
      } else if (jj_2_34(3)) {
        jj_consume_token(56);
      } else if (jj_2_35(3)) {
        jj_consume_token(57);
      } else if (jj_2_36(3)) {
        jj_consume_token(58);
      } else if (jj_2_37(3)) {
        jj_consume_token(59);
      } else if (jj_2_38(3)) {
        jj_consume_token(60);
      } else if (jj_2_39(3)) {
        jj_consume_token(61);
      } else if (jj_2_40(3)) {
        jj_consume_token(62);
      } else if (jj_2_41(3)) {
        jj_consume_token(63);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.token = token;
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void IfStatement() throws ParseException {/*@bgen(jjtree) IfStatement */
  ASTIfStatement jjtn000 = new ASTIfStatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(45);
      Expression();
      jj_consume_token(48);
      Statement();
      if (jj_2_42(2147483647)) {
        jj_consume_token(ELSE);
        Statement();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void WhileStatement() throws ParseException {/*@bgen(jjtree) WhileStatement */
  ASTWhileStatement jjtn000 = new ASTWhileStatement(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(45);
      Expression();
      jj_consume_token(48);
      Statement();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void PrintStatement() throws ParseException {/*@bgen(jjtree) PrintStatement */
  ASTPrintStatement jjtn000 = new ASTPrintStatement(JJTPRINTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(64);
      jj_consume_token(45);
      Expression();
      jj_consume_token(48);
      jj_consume_token(50);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Expression() throws ParseException {
    RelationalExpression();
  }

  final public void RelationalExpression() throws ParseException {
ASTRelationalExpression jjtn001 = new ASTRelationalExpression(JJTRELATIONALEXPRESSION);
   boolean jjtc001 = true;
   jjtree.openNodeScope(jjtn001);
    try {
      ArrayExpression();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 65:
        case 66:
        case 67:
        case 68:
        case 69:
        case 70:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_8;
        }
        RelationalOperator();
        ArrayExpression();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
     jjtree.clearNodeScope(jjtn001);
     jjtc001 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte001 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte001;}
   }
   if (jjte001 instanceof ParseException) {
     {if (true) throw (ParseException)jjte001;}
   }
   {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
     jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
   }
    }
  }

  final public void RelationalOperator() throws ParseException {/*@bgen(jjtree) RelationalOperator */
  ASTRelationalOperator jjtn000 = new ASTRelationalOperator(JJTRELATIONALOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_43(3)) {
        jj_consume_token(65);
      } else if (jj_2_44(3)) {
        jj_consume_token(66);
      } else if (jj_2_45(3)) {
        jj_consume_token(67);
      } else if (jj_2_46(3)) {
        jj_consume_token(68);
      } else if (jj_2_47(3)) {
        jj_consume_token(69);
      } else if (jj_2_48(3)) {
        jj_consume_token(70);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
jjtn000.token = token;
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ArrayExpression() throws ParseException {
ASTArrayExpression jjtn001 = new ASTArrayExpression(JJTARRAYEXPRESSION);
   boolean jjtc001 = true;
   jjtree.openNodeScope(jjtn001);
    try {
      CallExpression();
      label_9:
      while (true) {
        if (jj_2_49(2)) {
          ;
        } else {
          break label_9;
        }
        jj_consume_token(46);
        CallExpression();
        jj_consume_token(47);
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
     jjtree.clearNodeScope(jjtn001);
     jjtc001 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte001 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte001;}
   }
   if (jjte001 instanceof ParseException) {
     {if (true) throw (ParseException)jjte001;}
   }
   {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
     jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
   }
    }
  }
